--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run:
-          - yarn install --ignore-optional
-          - yarn build
+      - run: yarn install --ignore-optional
 
       - save_cache:
           paths:
