--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "google-map-react": "~1.0.0",
     "lodash": "~4.17.5",
     "lodash-webpack-plugin": "~0.11.4",
-    "prop-types": "~15.6.0",
-    "react": "~16.2.0",
+    "prop-types": "15.6.1",
+    "react": "~16.3.2",
+    "react-dom": "~16.3.2",
     "react-helmet": "~5.2.0",
     "smoothscroll-polyfill": "~0.4.3",
     "uuid": "~3.2.1"
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "emotion-server": "~9.1.3",
+    "eslint-import-resolver-webpack": "^0.10.0",
     "uglifyjs-webpack-plugin": "^1.2.5"
   },
   "optionalDependencies": {
