--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "dependencies": {
     "babel-plugin-emotion": "~9.1.2",
+    "contentful": "~6.1.2",
     "emotion": "~9.1.3",
     "fetch-jsonp": "^1.1.3",
     "gatsby": "~1.9.261",
