--- a/package.json
+++ b/package.json
@@ -35,16 +35,18 @@
   "main": "n/a",
   "scripts": {
     "start": "yarn develop",
-    "build": "gatsby build --no-uglify=true",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "babel-plugin-transform-regenerator": "~6.26.0",
+    "babel-plugin-transform-runtime": "~6.23.0",
     "emotion-server": "~9.1.3",
     "eslint-import-resolver-webpack": "^0.10.0",
-    "uglifyjs-webpack-plugin": "^1.2.5"
+    "uglifyjs-webpack-plugin": "~1.2.7"
   },
   "optionalDependencies": {
     "babel-eslint": "~8.2.3",
