--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-dom": "~16.3.2",
     "react-helmet": "~5.2.0",
     "smoothscroll-polyfill": "~0.4.3",
-    "uuid": "~3.2.1"
+    "uuid": "~3.2.1",
+    "uglifyjs-webpack-plugin": "~1.2.7",
+    "dotenv": "~6.0.0"
   },
   "license": "MIT",
   "main": "n/a",
@@ -45,8 +47,7 @@
     "babel-plugin-transform-regenerator": "~6.26.0",
     "babel-plugin-transform-runtime": "~6.23.0",
     "emotion-server": "~9.1.3",
-    "eslint-import-resolver-webpack": "^0.10.0",
-    "uglifyjs-webpack-plugin": "~1.2.7"
+    "eslint-import-resolver-webpack": "^0.10.0", 
   },
   "optionalDependencies": {
     "babel-eslint": "~8.2.3",
