--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "dependencies": {
     "babel-plugin-emotion": "~9.1.2",
+    "dotenv": "~6.0.0",
     "emotion": "~9.1.3",
     "fetch-jsonp": "^1.1.3",
     "gatsby": "~1.9.261",
@@ -27,11 +28,11 @@
     "prop-types": "15.6.1",
     "react": "~16.3.2",
     "react-dom": "~16.3.2",
+    "react-emotion": "~9.2.6",
     "react-helmet": "~5.2.0",
     "smoothscroll-polyfill": "~0.4.3",
-    "uuid": "~3.2.1",
     "uglifyjs-webpack-plugin": "~1.2.7",
-    "dotenv": "~6.0.0"
+    "uuid": "~3.2.1"
   },
   "license": "MIT",
   "main": "n/a",
