--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby": "~1.9.261",
     "gatsby-link": "~1.6.37",
     "gatsby-plugin-emotion": "~1.1.16",
+    "gatsby-plugin-google-analytics": "~1.0.31",
     "gatsby-plugin-react-helmet": "~2.0.5",
     "gatsby-plugin-sharp": "~1.6.34",
     "gatsby-remark-images": "~1.5.50",
