--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "jsne.co.uk",
   "private": true,
   "description": "Website for JavaScript North East – made with Gatsby",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "author": "JSNE",
   "browserslist": [
     "> .25%"
   ],
   "dependencies": {
     "babel-plugin-emotion": "~9.1.2",
+    "babel-plugin-transform-regenerator": "~6.26.0",
+    "babel-plugin-transform-runtime": "~6.23.0",
     "dotenv": "~6.0.0",
     "emotion": "~9.1.3",
+    "emotion-server": "~9.1.3",
     "fetch-jsonp": "^1.1.3",
     "gatsby": "~1.9.261",
     "gatsby-link": "~1.6.37",
@@ -18,10 +21,9 @@
     "gatsby-plugin-google-analytics": "~1.0.31",
     "gatsby-plugin-react-helmet": "~2.0.5",
     "gatsby-plugin-sharp": "~1.6.34",
-    "gatsby-remark-images": "~1.5.50",
     "gatsby-source-contentful": "~1.3.54",
     "gatsby-source-filesystem": "~1.5.23",
-    "gatsby-transformer-remark": "~1.7.33",
+    "gatsby-transformer-remark": "~1.7.44",
     "gatsby-transformer-sharp": "~1.6.21",
     "google-map-react": "~1.0.0",
     "lodash": "~4.17.5",
@@ -42,19 +44,14 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "serve": "gatsby serve",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
+    "format": "prettier --trailing-comma es5 --single-quote \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "babel-plugin-transform-regenerator": "~6.26.0",
-    "babel-plugin-transform-runtime": "~6.23.0",
-    "emotion-server": "~9.1.3",
-    "eslint-import-resolver-webpack": "^0.10.0"
-  },
-  "optionalDependencies": {
     "babel-eslint": "~8.2.3",
     "eslint": "~4.19.1",
     "eslint-config-airbnb": "~16.1.0",
+    "eslint-import-resolver-webpack": "~0.10.1",
     "eslint-plugin-import": "~2.11.0",
     "eslint-plugin-jsx-a11y": "~6.0.3",
     "eslint-plugin-react": "~7.7.0",
