--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "JSNE",
   "homepage": "https://github.com/jsne/jsne.co.uk#jsne-website",
   "repository": {
-  "type" : "git",
-    "url" : "https://github.com/jsne/jsne.co.uk.git"
+    "type": "git",
+    "url": "https://github.com/jsne/jsne.co.uk.git"
   },
   "browserslist": [
     "> .25%"
@@ -17,30 +17,32 @@
     "babel-plugin-transform-regenerator": "~6.26.0",
     "babel-plugin-transform-runtime": "~6.23.0",
     "dotenv": "~6.0.0",
-    "emotion": "~9.1.3",
-    "emotion-server": "~9.1.3",
+    "emotion": "~9.2.10",
+    "emotion-server": "~9.2.10",
     "fetch-jsonp": "^1.1.3",
-    "gatsby": "~1.9.261",
-    "gatsby-link": "~1.6.37",
-    "gatsby-plugin-emotion": "~1.1.16",
-    "gatsby-plugin-google-analytics": "~1.0.31",
-    "gatsby-plugin-react-helmet": "~2.0.5",
-    "gatsby-plugin-sharp": "~1.6.34",
-    "gatsby-source-contentful": "~1.3.54",
-    "gatsby-source-filesystem": "~1.5.23",
-    "gatsby-transformer-remark": "~1.7.44",
-    "gatsby-transformer-sharp": "~1.6.21",
+    "gatsby": "~2.0.7",
+    "gatsby-image": "~2.0.8",
+    "gatsby-link": "2.0.1",
+    "gatsby-plugin-emotion": "~2.0.5",
+    "gatsby-plugin-google-analytics": "2.0.6",
+    "gatsby-plugin-react-helmet": "3.0.0",
+    "gatsby-plugin-sharp": "~2.0.5",
+    "gatsby-source-contentful": "2.0.1",
+    "gatsby-source-filesystem": "2.0.1",
+    "gatsby-transformer-remark": "2.1.3",
+    "gatsby-transformer-sharp": "2.1.1",
     "google-map-react": "~1.0.0",
     "lodash": "~4.17.5",
     "lodash-webpack-plugin": "~0.11.4",
-    "prop-types": "15.6.1",
-    "react": "~16.3.2",
-    "react-dom": "~16.3.2",
+    "prop-types": "15.6.2",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
     "react-emotion": "~9.2.6",
     "react-helmet": "~5.2.0",
+    "react-typography": "~0.16.13",
     "smoothscroll-polyfill": "~0.4.3",
-    "uglifyjs-webpack-plugin": "~1.2.7",
-    "uuid": "~3.2.1"
+    "typography": "~0.16.17",
+    "uuid": "~3.3.2"
   },
   "license": "MIT",
   "main": "n/a",
