--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "type": "git",
     "url": "https://github.com/jsne/jsne.co.uk.git"
   },
-  "browserslist": [
-    "> .25%"
-  ],
+  "bugs": {
+    "url": "https://github.com/jsne/jsne.co.uk/issues"
+  },
   "dependencies": {
     "babel-plugin-emotion": "~9.1.2",
     "babel-plugin-transform-regenerator": "~6.26.0",
     "babel-plugin-transform-runtime": "~6.23.0",
     "dotenv": "~6.0.0",
     "emotion": "~9.2.10",
-    "emotion-server": "~9.2.10",
     "fetch-jsonp": "^1.1.3",
     "gatsby": "~2.0.7",
     "gatsby-image": "~2.0.8",
@@ -56,12 +55,12 @@
   },
   "devDependencies": {
     "babel-eslint": "~8.2.3",
-    "eslint": "~4.19.1",
-    "eslint-config-airbnb": "~16.1.0",
+    "eslint": "~5.6.0",
+    "eslint-config-airbnb": "~17.1.0",
     "eslint-import-resolver-webpack": "~0.10.1",
-    "eslint-plugin-import": "~2.11.0",
-    "eslint-plugin-jsx-a11y": "~6.0.3",
-    "eslint-plugin-react": "~7.7.0",
+    "eslint-plugin-import": "~2.14.0",
+    "eslint-plugin-jsx-a11y": "~6.1.2",
+    "eslint-plugin-react": "~7.11.1",
     "prettier": "~1.7.4"
   }
 }
