--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "url": "https://github.com/jsne/jsne.co.uk/issues"
   },
   "dependencies": {
-    "babel-plugin-emotion": "~9.1.2",
     "babel-plugin-transform-regenerator": "~6.26.0",
     "babel-plugin-transform-runtime": "~6.23.0",
     "dotenv": "~6.0.0",
     "emotion": "~9.2.10",
+    "emotion-server": "~9.2.12",
     "fetch-jsonp": "^1.1.3",
     "gatsby": "~2.0.7",
     "gatsby-image": "~2.0.8",
     "gatsby-link": "2.0.1",
-    "gatsby-plugin-emotion": "~2.0.5",
+    "gatsby-plugin-emotion": "~2.0.6",
     "gatsby-plugin-google-analytics": "2.0.6",
     "gatsby-plugin-react-helmet": "3.0.0",
     "gatsby-plugin-sharp": "~2.0.5",
