--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "https://github.com/jsne/jsne.co.uk/issues"
   },
   "dependencies": {
+    "@mdx-js/runtime": "~0.16.8",
     "babel-plugin-transform-regenerator": "~6.26.0",
     "babel-plugin-transform-runtime": "~6.23.0",
     "dotenv": "~6.0.0",
