--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "~6.0.0",
     "emotion": "~9.2.10",
     "emotion-server": "~9.2.12",
+    "emotion-theming": "~9.2.9",
     "fetch-jsonp": "^1.1.3",
     "gatsby": "~2.0.7",
     "gatsby-image": "~2.0.8",
