--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "url": "https://github.com/jsne/jsne.co.uk/issues"
   },
   "dependencies": {
+    "@mdx-js/runtime": "~0.16.8",
     "babel-plugin-transform-regenerator": "~6.26.0",
     "babel-plugin-transform-runtime": "~6.23.0",
     "dotenv": "~6.0.0",
     "emotion": "~9.2.10",
     "emotion-server": "~9.2.12",
+    "emotion-theming": "~9.2.9",
     "fetch-jsonp": "^1.1.3",
     "gatsby": "~2.0.7",
     "gatsby-image": "~2.0.8",
@@ -46,6 +48,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "prestart": "rm -rf ./cache",
     "start": "yarn develop",
     "build": "gatsby build",
     "develop": "gatsby develop",
