--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,11 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[*.md]
+trim_trailing_whitespace = false
+indent_style = space
+
+[{package.json,*.yml}]
+indent_style = space
+indent_size = 2
