--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "url": "https://github.com/jsne/jsne.co.uk/issues"
   },
   "dependencies": {
+    "@mdx-js/mdx": "~0.20.3",
     "@mdx-js/runtime": "~0.16.8",
+    "@mdx-js/tag": "~0.20.3",
     "babel-plugin-transform-regenerator": "~6.26.0",
     "babel-plugin-transform-runtime": "~6.23.0",
     "dotenv": "~6.0.0",
@@ -24,6 +26,7 @@
     "gatsby": "~2.0.7",
     "gatsby-image": "~2.0.8",
     "gatsby-link": "2.0.1",
+    "gatsby-mdx": "~0.4.4",
     "gatsby-plugin-emotion": "~2.0.6",
     "gatsby-plugin-google-analytics": "2.0.6",
     "gatsby-plugin-react-helmet": "3.0.0",
