--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-emotion": "~9.2.6",
     "react-helmet": "~5.2.0",
     "react-typography": "~0.16.13",
+    "slugify": "~1.3.4",
     "smoothscroll-polyfill": "~0.4.3",
     "typography": "~0.16.17",
     "uuid": "~3.3.2"
