--- a/package.json
+++ b/package.json
@@ -13,37 +13,40 @@
     "url": "https://github.com/jsne/jsne.co.uk/issues"
   },
   "dependencies": {
-    "@mdx-js/runtime": "~0.16.8",
-    "babel-plugin-transform-regenerator": "~6.26.0",
-    "babel-plugin-transform-runtime": "~6.23.0",
-    "dotenv": "~6.0.0",
-    "emotion": "~9.2.10",
-    "emotion-server": "~9.2.12",
-    "emotion-theming": "~9.2.9",
+    "@mdx-js/mdx": "^1.0.21",
+    "@mdx-js/react": "^1.0.21",
+    "@mdx-js/runtime": "^1.0.21",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "dotenv": "^8.0.0",
+    "emotion": "^9.2.10",
+    "emotion-server": "^9.2.12",
+    "emotion-theming": "^9.2.9",
     "fetch-jsonp": "^1.1.3",
-    "gatsby": "~2.0.7",
-    "gatsby-image": "~2.0.8",
-    "gatsby-link": "2.0.1",
-    "gatsby-plugin-emotion": "~2.0.6",
-    "gatsby-plugin-google-analytics": "2.0.6",
-    "gatsby-plugin-react-helmet": "3.0.0",
-    "gatsby-plugin-sharp": "~2.0.5",
-    "gatsby-source-contentful": "2.0.1",
-    "gatsby-source-filesystem": "2.0.1",
-    "gatsby-transformer-remark": "2.1.3",
-    "gatsby-transformer-sharp": "2.1.1",
-    "google-map-react": "~1.0.0",
-    "lodash": "~4.17.5",
-    "lodash-webpack-plugin": "~0.11.4",
-    "prop-types": "15.6.2",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-emotion": "~9.2.6",
-    "react-helmet": "~5.2.0",
-    "react-typography": "~0.16.13",
-    "smoothscroll-polyfill": "~0.4.3",
-    "typography": "~0.16.17",
-    "uuid": "~3.3.2"
+    "gatsby": "^2.11.6",
+    "gatsby-image": "^2.2.3",
+    "gatsby-link": "2.2.0",
+    "gatsby-mdx": "^0.6.3",
+    "gatsby-plugin-emotion": "^2.0.6",
+    "gatsby-plugin-google-analytics": "2.1.1",
+    "gatsby-plugin-react-helmet": "3.1.0",
+    "gatsby-plugin-sharp": "^2.2.1",
+    "gatsby-source-contentful": "2.1.3",
+    "gatsby-source-filesystem": "2.1.1",
+    "gatsby-transformer-remark": "2.5.0",
+    "gatsby-transformer-sharp": "2.2.0",
+    "google-map-react": "^1.1.4",
+    "lodash": "^4.17.5",
+    "lodash-webpack-plugin": "^0.11.4",
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-emotion": "^9.2.6",
+    "react-helmet": "^5.2.0",
+    "react-typography": "^0.16.13",
+    "smoothscroll-polyfill": "^0.4.3",
+    "typography": "^0.16.17",
+    "uuid": "^3.3.2"
   },
   "license": "MIT",
   "main": "n/a",
@@ -57,13 +60,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "babel-eslint": "~8.2.3",
-    "eslint": "~5.6.0",
-    "eslint-config-airbnb": "~17.1.0",
-    "eslint-import-resolver-webpack": "~0.10.1",
-    "eslint-plugin-import": "~2.14.0",
-    "eslint-plugin-jsx-a11y": "~6.1.2",
-    "eslint-plugin-react": "~7.11.1",
-    "prettier": "~1.7.4"
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.2",
+    "eslint-plugin-react": "^7.14.2",
+    "prettier": "^1.18.2"
   }
 }
