Replace rm rf in prestart script with gatsby clean

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "prestart": "rm -rf ./cache",
+    "prestart": "gatsby clean",
     "start": "yarn develop",
     "build": "gatsby build",
     "develop": "gatsby develop",
