--- a/package.json
+++ b/package.json
@@ -12,22 +12,34 @@
   "bugs": {
     "url": "https://github.com/jsne/jsne.co.uk/issues"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{css,js,jsx}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "dependencies": {
+    "@emotion/core": "^10.0.14",
+    "@emotion/styled": "^10.0.14",
     "@mdx-js/mdx": "^1.0.21",
     "@mdx-js/react": "^1.0.21",
     "@mdx-js/runtime": "^1.0.21",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "dotenv": "^8.0.0",
-    "emotion": "^9.2.10",
-    "emotion-server": "^9.2.12",
-    "emotion-theming": "^9.2.9",
+    "emotion-server": "^10.0.14",
+    "emotion-theming": "^10.0.14",
     "fetch-jsonp": "^1.1.3",
     "gatsby": "^2.11.6",
     "gatsby-image": "^2.2.3",
     "gatsby-link": "2.2.0",
     "gatsby-mdx": "^0.6.3",
-    "gatsby-plugin-emotion": "^2.0.6",
+    "gatsby-plugin-emotion": "^4.1.0",
     "gatsby-plugin-google-analytics": "2.1.1",
     "gatsby-plugin-react-helmet": "3.1.0",
     "gatsby-plugin-sharp": "^2.2.1",
@@ -41,7 +53,6 @@
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-emotion": "^9.2.6",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
     "smoothscroll-polyfill": "^0.4.3",
@@ -56,17 +67,20 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "serve": "gatsby serve",
-    "format": "prettier --trailing-comma es5 --single-quote \"{gatsby-*.js,src/**/*.js}\"",
+    "format": "prettier \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.2",
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^6.2.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-shopify": "^29.0.2",
+    "husky": "^3.0.0",
+    "lint-staged": "^9.2.0",
     "prettier": "^1.18.2"
   }
 }
