Only run lint-staged on js,jsx files

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     }
   },
   "lint-staged": {
-    "**/*.{css,js,jsx}": [
+    "**/*.{js,jsx}": [
       "prettier --write",
       "eslint --fix",
       "git add"
