--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "dotenv": "^8.0.0",
     "emotion-server": "^10.0.14",
     "emotion-theming": "^10.0.14",
-    "fetch-jsonp": "^1.1.3",
     "gatsby": "^2.11.6",
     "gatsby-image": "^2.2.3",
     "gatsby-link": "2.2.0",
@@ -48,16 +47,11 @@
     "gatsby-transformer-remark": "2.5.0",
     "gatsby-transformer-sharp": "2.2.0",
     "google-map-react": "^1.1.4",
-    "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.13",
-    "smoothscroll-polyfill": "^0.4.3",
-    "typography": "^0.16.17",
-    "uuid": "^3.3.2"
+    "react-helmet": "^5.2.0"
   },
   "license": "MIT",
   "main": "n/a",
