--- a/package.json
+++ b/package.json
@@ -26,26 +26,27 @@
   "dependencies": {
     "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.14",
-    "@mdx-js/mdx": "^1.0.21",
+    "@mdx-js/mdx": "^1.1.0",
     "@mdx-js/react": "^1.0.21",
-    "@mdx-js/runtime": "^1.0.21",
+    "@mdx-js/runtime": "^1.1.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "dotenv": "^8.0.0",
     "emotion-server": "^10.0.14",
     "emotion-theming": "^10.0.14",
-    "gatsby": "^2.11.6",
-    "gatsby-image": "^2.2.3",
-    "gatsby-link": "2.2.0",
+    "gatsby": "^2.13.25",
+    "gatsby-image": "^2.2.6",
+    "gatsby-link": "2.2.2",
     "gatsby-mdx": "^0.6.3",
-    "gatsby-plugin-emotion": "^4.1.0",
-    "gatsby-plugin-google-analytics": "2.1.1",
-    "gatsby-plugin-react-helmet": "3.1.0",
-    "gatsby-plugin-sharp": "^2.2.1",
-    "gatsby-source-contentful": "2.1.3",
-    "gatsby-source-filesystem": "2.1.1",
-    "gatsby-transformer-remark": "2.5.0",
-    "gatsby-transformer-sharp": "2.2.0",
+    "gatsby-plugin-emotion": "^4.1.2",
+    "gatsby-plugin-google-analytics": "2.1.4",
+    "gatsby-plugin-mdx": "^1.0.13",
+    "gatsby-plugin-react-helmet": "3.1.2",
+    "gatsby-plugin-sharp": "^2.2.7",
+    "gatsby-source-contentful": "2.1.13",
+    "gatsby-source-filesystem": "2.1.5",
+    "gatsby-transformer-remark": "2.6.6",
+    "gatsby-transformer-sharp": "2.2.3",
     "google-map-react": "^1.1.4",
     "lodash-webpack-plugin": "^0.11.4",
     "prop-types": "15.7.2",
