--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gatsby-plugin-google-analytics": "2.1.4",
     "gatsby-plugin-mdx": "^1.0.13",
     "gatsby-plugin-react-helmet": "3.1.2",
+    "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-sharp": "^2.2.7",
     "gatsby-source-contentful": "2.1.13",
     "gatsby-source-filesystem": "2.1.5",
