--- a/package.json
+++ b/package.json
@@ -25,29 +25,30 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.14",
+    "@emotion/is-prop-valid": "^0.8.2",
     "@emotion/styled": "^10.0.14",
     "@mdx-js/mdx": "^1.1.0",
-    "@mdx-js/react": "^1.0.21",
+    "@mdx-js/react": "^1.0.27",
     "@mdx-js/runtime": "^1.1.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "dotenv": "^8.0.0",
     "emotion-server": "^10.0.14",
     "emotion-theming": "^10.0.14",
-    "gatsby": "^2.13.25",
+    "gatsby": "^2.13.32",
     "gatsby-image": "^2.2.6",
     "gatsby-link": "2.2.2",
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-google-analytics": "2.1.4",
-    "gatsby-plugin-mdx": "^1.0.13",
+    "gatsby-plugin-mdx": "^1.0.15",
     "gatsby-plugin-react-helmet": "3.1.2",
     "gatsby-plugin-react-svg": "^2.1.1",
-    "gatsby-plugin-sharp": "^2.2.7",
-    "gatsby-source-contentful": "2.1.13",
+    "gatsby-plugin-sharp": "^2.2.8",
+    "gatsby-source-contentful": "2.1.14",
     "gatsby-source-filesystem": "2.1.5",
-    "gatsby-transformer-remark": "2.6.6",
-    "gatsby-transformer-sharp": "2.2.3",
+    "gatsby-transformer-remark": "2.6.8",
+    "gatsby-transformer-sharp": "2.2.4",
     "google-map-react": "^1.1.4",
     "lodash-webpack-plugin": "^0.11.4",
     "prop-types": "15.7.2",
@@ -71,11 +72,11 @@
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-shopify": "^29.0.2",
-    "husky": "^3.0.0",
+    "husky": "^3.0.1",
     "lint-staged": "^9.2.0",
     "prettier": "^1.18.2"
   }
