--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "styled-system": "^5.0.16"
   },
   "license": "MIT",
   "main": "n/a",
