--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mdx-js/mdx": "^1.1.0",
     "@mdx-js/react": "^1.0.27",
     "@mdx-js/runtime": "^1.1.0",
+    "@styled-system/should-forward-prop": "^5.0.16",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "dotenv": "^8.0.0",
